Redeploy contracts and update subgraphs
