# api/docs/swagger.json
@@ -97,6 +97,11 @@
         },
         "/temp": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Temporary route for testing JWT middleware",
                 "consumes": [
                     "text/plain"
